--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
       - PG_DATABASE=postgres
       - PG_USER=postgres
       - PG_PASSWORD=postgres 
+      - PG_PORT=5432
       - DATABASE_URL=postgresql://postgres:postgres@database:5432/postgres
   
   database:
